Backgrounds for body and left panel have been added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,6 +99,8 @@ body {
   display: flex;
   justify-content: center;
   background-color: #FCFAFA;
+  background-image: url(/background.svg);
+  background-repeat: repeat;
 }
 
 *, *::before, *::after {
