--- a/src/components/atoms/menu-option/menu-option.scss
+++ b/src/components/atoms/menu-option/menu-option.scss
@@ -24,8 +24,15 @@
         font-size: 32px;
         font-weight: bolder;
         width: calc(100% + 30px);
+
         h2 {
             padding-left: 20px; // TODO: подумать как сделать отступ лучше
         }
+    }
+
+    &.--disabled {
+        background-color: $LIGHT_GRAY;
+        color: $GRAY;
+        cursor: not-allowed;
     }
 }
