--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,6 +3,7 @@ $DIRTY_BLUE: #47678D;
 $DARK_BLUE: #112B48;
 $LIGHTEST_BLUE: #417EAB;
 $DARK_GRAY: #646464;
+$LIGHT_GRAY: #383b41;
 $GRAY: #D9D9D9;
 $BLACK: #000000;
 $WHITE: #FFFFFF;
