--- a/src/components/atoms/menu-option/menu-option.scss
+++ b/src/components/atoms/menu-option/menu-option.scss
@@ -9,12 +9,17 @@
     justify-content: start;
     align-items: center;
     padding-left: 10px;
-    color: $WHITE;
     transition: background-color 0.3s ease; // TODO: Вынести в переменную
     overflow: hidden;
     white-space: nowrap;
     cursor: pointer;
-
+    &__link {
+        color: $WHITE;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+    }
     &:hover {
         background-color: $DIRTY_BLUE;
     }
@@ -31,8 +36,8 @@
     }
 
     &.--disabled {
-        background-color: $LIGHT_GRAY;
-        color: $GRAY;
+        background-color: $DARK_GRAY;
+        color: $LIGHT_GRAY;
         cursor: not-allowed;
     }
 }
