--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,8 +2,8 @@ $LIGHT_BLUE: #1C4371;
 $DIRTY_BLUE: #47678D;
 $DARK_BLUE: #112B48;
 $LIGHTEST_BLUE: #417EAB;
-$DARK_GRAY: #646464;
-$LIGHT_GRAY: #383b41;
+$DARK_GRAY: #383b41;
+$LIGHT_GRAY: #646464;
 $GRAY: #D9D9D9;
 $BLACK: #000000;
 $WHITE: #FFFFFF;
