--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,9 +32,10 @@ h1, h2, h3, h4, h5, h6, p {
 	font-weight: inherit;
 }
 
-ul, ul li {
-	list-style: none;
+ul, ol {
+  list-style-position: inside;
 }
+
 
 img {
 	vertical-align: top;
