--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -7,6 +7,7 @@ h1 {
     @media(max-width: $EXTRA_LARGE) {
         font-size: 32px;
     }
+    color: $LIGHT_BLUE;
 }
 
 h2 {
@@ -21,7 +22,7 @@ h3 {
 }
 
 h4 {
-    font-size: 24px;
+    font-size: 16px;
     @media(max-width: $EXTRA_LARGE) {
         font-size: 16px;
     }
@@ -47,9 +48,12 @@ span,
 div {
     & .--bold {
         font-weight: bold;
-    }
+    };
 
-    ;
+
+    & .--half-bold {
+        font-weight: 500;
+    }
 
     & .--italic {
         font-style: italic;
