--- a/src/app/layout.scss
+++ b/src/app/layout.scss
@@ -1,4 +1,18 @@
+@import '../styles/colors';
+
 .container {
     display: flex;
-    height: 100%;
+    width: 100%;
+    min-height: 100%;
+    height: 1px;
+    &__content {
+      flex: 1;
+      background-color: $WHITE;
+      padding: 20px;
+      padding-left: 40px;
+      position: relative;
+      z-index: 0;
+      min-height: 100%;
+      height: max-content;
+    }  
 }
