--- a/src/app/layout.scss
+++ b/src/app/layout.scss
@@ -6,6 +6,7 @@
     min-height: 100%;
     height: 1px;
     &__content {
+      height: 1px;
       flex: 1;
       background-color: $WHITE;
       padding: 20px;
@@ -13,6 +14,5 @@
       position: relative;
       z-index: 0;
       min-height: 100%;
-      height: max-content;
     }  
 }
