Overwiev page has been added

--- a/src/components/molecules/work-exp/work-exp-title/work-exp-title.scss
+++ b/src/components/molecules/work-exp/work-exp-title/work-exp-title.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/colors';
+@import '../../../../styles/colors.scss';
 
 $line-color: $LIGHT_BLUE;
 $element-bg-color: #f8f9fa;
