--- a/src/components/atoms/menu-option/menu-option.scss
+++ b/src/components/atoms/menu-option/menu-option.scss
@@ -13,13 +13,18 @@
     overflow: hidden;
     white-space: nowrap;
     cursor: pointer;
+
     &__link {
-        color: $WHITE;
+        h2 { // TODO: Разобраться и завести issue цвет отображается корректно в dev
+            color: $WHITE;
+        }
+
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
     }
+
     &:hover {
         background-color: $DIRTY_BLUE;
     }
@@ -43,9 +48,11 @@
 
     &.--short {
         width: calc(100% + 10px);
-        h2{
+
+        h2 {
             padding: 0
         }
+
         &.--active {
             width: calc(100% + 15px)
         }
