Adaptive has been added

--- a/src/components/atoms/iconed-record/iconed-link.scss
+++ b/src/components/atoms/iconed-record/iconed-link.scss
@@ -4,7 +4,7 @@
     font-size: 20px;
     gap: 15px;
     &__icon {
-        height:50px;
-        width: 50px;
+        height:5rem;
+        width: 5rem;
     }
 }
