--- a/src/components/atoms/switcher/switcher.scss
+++ b/src/components/atoms/switcher/switcher.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/colors';
 
 .switcher {
+    font-size: 2rem;
     display: flex;
     width: min-content;
     border-radius: 6%;
