--- a/src/components/atoms/titled-block/titled-block.scss
+++ b/src/components/atoms/titled-block/titled-block.scss
@@ -2,8 +2,8 @@
 
 .titled_block {
     &__content {
-        font-size: 18px;
-        padding: 10px 0;
-        padding-left: 30px;
+        font-size: 1.8rem;
+        padding: 1rem 0;
+        padding-left: 2rem;
     }
 }
