--- a/src/app/cv/layout.scss
+++ b/src/app/cv/layout.scss
@@ -9,8 +9,8 @@
       height: max-content;
       flex: 1;
       background-color: $WHITE;
-      padding: 20px;
-      padding-left: 40px;
+      padding: 2rem;
+      padding-left: 3rem;
       position: relative;
       z-index: 0;
       min-height: 100%;
