--- a/src/components/atoms/menu-option/menu-option.scss
+++ b/src/components/atoms/menu-option/menu-option.scss
@@ -2,13 +2,13 @@
 @import '../../../styles/typography';
 
 .menu-option {
-    width: calc(100% + 20px);
-    height: 45px;
+    width: calc(100% + 2rem);
+    height: 4.5rem;
     background-color: $DARK_BLUE;
     display: flex;
     justify-content: start;
     align-items: center;
-    padding-left: 10px;
+    padding-left: 1rem;
     transition: background-color 0.3s ease; // TODO: Вынести в переменную
     overflow: hidden;
     white-space: nowrap;
@@ -31,12 +31,12 @@
 
     &.--active {
         background-color: $LIGHTEST_BLUE;
-        font-size: 32px;
+        font-size: 3.2rem;
         font-weight: bolder;
-        width: calc(100% + 30px);
+        width: calc(100% + 3rem);
 
         h2 {
-            padding-left: 20px; // TODO: подумать как сделать отступ лучше
+            padding-left: 2rem; // TODO: подумать как сделать отступ лучше
         }
     }
 
@@ -47,14 +47,14 @@
     }
 
     &.--short {
-        width: calc(100% + 10px);
+        width: calc(100% + 1rem);
 
         h2 {
             padding: 0
         }
 
         &.--active {
-            width: calc(100% + 15px)
+            width: calc(100% + 1.5rem)
         }
     }
 }
