--- a/src/components/molecules/work-exp/work-exp-title/work-exp-title.scss
+++ b/src/components/molecules/work-exp/work-exp-title/work-exp-title.scss
@@ -1,4 +1,5 @@
 @import '../../../../styles/colors.scss';
+@import '../../../../styles/breakpoints.scss';
 
 $line-color: $LIGHT_BLUE;
 $element-bg-color: #f8f9fa;
@@ -9,6 +10,12 @@ $gap-size: 0;
     display: flex;
     align-items: center;
     padding: 10px 0 10px 10px;
+
+    @media(max-width: $SMALL) {
+        align-items: self-start;
+        flex-direction: column;
+    }
+
     &__left-container {
         display: flex;
         align-items: center;
@@ -20,25 +27,38 @@ $gap-size: 0;
         flex-grow: 1;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr auto 1fr; 
+        grid-template-rows: 1fr auto 1fr;
+
+        @media(max-width: $SMALL) {
+            display: flex;
+            flex-direction: column;
+            padding: 1rem;
+        }
+
         &__line {
             background-color: $line-color;
             width: 100%;
             height: 5px;
             grid-row: 2;
+
+            @media(max-width: $SMALL) {
+                display: none;
+            }
         }
 
-        &__position, &__period {
+        &__position,
+        &__period {
             display: flex;
             align-items: center;
             padding-right: 20px;
+            align-self: flex-start;
         }
-        
+
         &__position {
             grid-row: 1; // Позиция на первой строке
             justify-self: flex-end;
         }
-        
+
         &__period {
             justify-self: flex-end;
             grid-row: 3; // Период на третьей строке
