--- a/src/components/pages/overview/overview.scss
+++ b/src/components/pages/overview/overview.scss
@@ -6,14 +6,16 @@
     flex-wrap: wrap;
     &__main {
         display: flex;
+        flex-wrap: wrap;
         width: 100%;
         justify-content: space-between;
+        gap: 30px;
     }
 
     &__block {
         display: flex;
-        flex-direction: column;
         gap: 20px;
+        flex-wrap: wrap;
     }
 
     &__contacts {
