--- a/src/components/widgets/left-panel/left-panel.scss
+++ b/src/components/widgets/left-panel/left-panel.scss
@@ -1,22 +1,25 @@
 @import '../../../styles/colors';
+@import '../../../styles/breakpoints.scss';
 
 .left_panel {
-    width: 300px;
-    transition: width 0.5s ease;
+    min-width: 30rem;
+    transition: min-width 0.5s ease;
+
     &.--closed {
-        width: 50px;
+        min-width: 5rem;
     }
+
     &__content {
         min-height: 100%;
         background-color: $LIGHT_BLUE;
-        width: 300px; // Исходная ширина
-        padding: 10px;
+        width: 30rem; // Исходная ширина
+        padding: 1rem;
         transition: width 0.5s ease; // Анимация изменения ширины
         z-index: 1;
         position: fixed;
 
         &.--closed {
-            width: 50px; // Суженная ширина при добавлении класса --closed
+            width: 5rem; // Суженная ширина при добавлении класса --closed
             padding: 0;
         }
 
@@ -29,7 +32,7 @@
             }
 
             img {
-                padding: 10px;
+                padding: 1rem;
                 border-radius: 100%;
                 width: 100%;
                 height: 100%;
@@ -37,7 +40,7 @@
         }
 
         &__name-container {
-            padding: 0 0 20px 0;
+            padding: 0 0 2rem 0;
             width: 100%;
             text-align: center;
             overflow: hidden;
@@ -69,8 +72,44 @@
     left: 275px;
 
     &.--closed {
-        left: 20px;
-        top: -10px;
+        left: 2rem;
+        top: -1rem;
         position: relative;
+    }
+
+    @media(max-width: $EXTRA_LARGE) {
+        left: 175px;
+    }
+}
+
+.left_panel {
+    @media(max-width: $EXTRA_LARGE) {
+        min-width: 200px;
+        width: 200px;
+        &.--closed {
+            min-width: 50px;
+            width: 50px;
+        }
+    }
+
+    &__content {
+        @media(max-width: $EXTRA_LARGE) {
+            width: 200px;
+        }
+    }
+
+    &__switchers {
+        @media(max-width: $EXTRA_LARGE) {
+            flex-direction: column;
+            gap: 10px;
+            align-items: center;
+        }
+    }
+
+    .collapse-btn {
+        @media(max-width: $EXTRA_LARGE) {
+            height: 40px;
+            width: 40px;
+        }
     }
 }
