--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,26 +1,37 @@
 @import '../styles/breakpoints';
 @import '../styles/colors';
 
+html {
+    font-size: 10px;
+    @media(max-width: $EXTRA_LARGE) {
+        font-size: 6px;
+    }
+}
+
 h1 {
-    font-size: 40px;
     font-weight: bold;
-    color: $LIGHT_BLUE;
+    color: $LIGHT_BLUE;        
+    font-size: 3.6rem;    
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 2.6rem;
 }
 
 h3 {
-    font-size: 24px;
+    font-size: 2.4rem;
 }
 
 h4 {
-    font-size: 16px;
+    font-size: 2.4rem;
 }
 
 h5 {
-    font-size: 20px;
+    font-size: 1.8rem;
+}
+
+p{
+    font-size: 2.0rem;
 }
 
 
