--- a/src/app/cv/layout.scss
+++ b/src/app/cv/layout.scss
@@ -1,18 +1,42 @@
 @import '../../styles/colors';
+@import '../../styles/breakpoints.scss';
 
 .container {
-    display: flex;
-    width: 100%;
+  display: flex;
+  width: 100%;
+  min-height: 100%;
+  height: 1px;
+
+  &__content {
+    height: max-content;
+    flex: 1;
+    background-color: $WHITE;
+    padding: 2rem;
+    padding-left: 3rem;
+    position: relative;
+    z-index: 0;
     min-height: 100%;
-    height: 1px;
-    &__content {
-      height: max-content;
-      flex: 1;
-      background-color: $WHITE;
-      padding: 2rem;
-      padding-left: 3rem;
-      position: relative;
-      z-index: 0;
-      min-height: 100%;
-    }  
+    transition: width 0.5s ease;
+
+    @media(max-width: $EXTRA_SMALL) {
+      padding-left: 50px;
+    }
+  }
+
+  &__wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    position: absolute;
+    z-index: 1;
+    opacity: 0.3;
+    transition: opacity 0.5s ease;
+    @media(min-width: $EXTRA_SMALL) {
+      display: none;
+    }
+    &.--hidden {
+      display: none;
+      opacity: 0;
+    }
+  }
 }
