--- a/src/components/atoms/switcher/switcher.scss
+++ b/src/components/atoms/switcher/switcher.scss
@@ -13,9 +13,9 @@
     }
 
     &__option {
-        height: 35px;
-        width: 50px;
-        margin: 5px;
+        height: 3.5rem;
+        width: 5rem;
+        margin: 0.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
