--- a/src/components/features/menu/menu.scss
+++ b/src/components/features/menu/menu.scss
@@ -1,6 +1,9 @@
 .menu {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    padding: 10px 0;
+    gap: 1rem;
+    padding: 1rem;
+    &.--short {
+        padding: 1rem 0 0 0;
+    }
 }
