--- a/src/components/features/switchers/switchers.scss
+++ b/src/components/features/switchers/switchers.scss
@@ -1,13 +1,19 @@
+@import '../../../styles/breakpoints';
 .switchers {
     width: 100%;
     overflow: hidden;
     display: flex;
-    padding: 0 20px 0 0;
+    padding: 0 2rem 0 0;
     justify-content: space-between;
     position: relative;
     &.--closed {
         flex-direction: column;
         padding: 0;
-        gap: 10px;
+        gap: 1rem;
+    }
+    @media(max-width: $EXTRA_LARGE) {
+        flex-direction: row;
+        justify-content: center;
+        gap:1rem;
     }
 }
