--- a/src/components/pages/overview/overview.scss
+++ b/src/components/pages/overview/overview.scss
@@ -1,15 +1,15 @@
 .overview {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    padding: 0 50px;
+    gap: 2rem;
+    padding: 0 5rem;
     flex-wrap: wrap;
     &__main {
         display: flex;
         flex-wrap: wrap;
         width: 100%;
         justify-content: space-between;
-        gap: 30px;
+        gap: 3rem;
     }
 
     &__block {
@@ -22,6 +22,6 @@
         flex-wrap: wrap;
         display: flex;
         width: 100%;
-        gap: 50px;
+        gap: 5rem;
     }
 }
