--- a/src/components/widgets/left-panel/left-panel.scss
+++ b/src/components/widgets/left-panel/left-panel.scss
@@ -14,6 +14,17 @@
         min-width: 5rem;
     }
 
+    &__download-btn {
+        display: flex;
+        justify-content: flex-end;
+        padding: 0 1rem 2rem 0;
+        &.--closed {
+            padding: 0.2rem;
+            padding-bottom: 2rem;
+            justify-content: center;
+        }
+    }
+
     &__content {
         min-height: 100%;
         background-color: $LIGHT_BLUE;
@@ -22,7 +33,9 @@
         transition: width 0.5s ease; // Анимация изменения ширины
         z-index: 1;
         position: fixed;
-
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         &.--closed {
             width: 5rem; // Суженная ширина при добавлении класса --closed
             padding: 0;
