Eslint added, aliases resolved

--- a/src/components/molecules/work-exp/work-exp-title/work-exp-title.scss
+++ b/src/components/molecules/work-exp/work-exp-title/work-exp-title.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/colors.scss';
-@import '../../../../styles/breakpoints.scss';
+@import '@styles/colors.scss';
+@import '@styles/breakpoints.scss';
 
 $line-color: $LIGHT_BLUE;
 $element-bg-color: #f8f9fa;
