--- a/src/app/cv/layout.scss
+++ b/src/app/cv/layout.scss
@@ -1,42 +1,48 @@
-@import '../../styles/colors';
-@import '../../styles/breakpoints.scss';
+@import '@styles/colors';
+@import '@styles/breakpoints.scss';
 
 .container {
   display: flex;
   width: 100%;
   min-height: 100%;
+  max-height: 100%;
   height: 1px;
 
   &__content {
-    height: max-content;
+    background-color: white;
     flex: 1;
     background-color: $WHITE;
     padding: 2rem;
     padding-left: 3rem;
-    position: relative;
     z-index: 0;
     min-height: 100%;
+    max-height: 100%;
     transition: width 0.5s ease;
+    overflow: auto;
 
-    @media(max-width: $EXTRA_SMALL) {
+    &.--frozen {
+      pointer-events: none;
+      overflow: hidden;
+    }
+
+    @media(max-width: $SMALL) {
       padding-left: 50px;
     }
   }
 
-  &__wrapper {
+  &__overlay {
     width: 100%;
     height: 100%;
     background-color: black;
-    position: absolute;
+    position: fixed;
     z-index: 1;
-    opacity: 0.3;
+    opacity: 0.4;
     transition: opacity 0.5s ease;
-    @media(min-width: $EXTRA_SMALL) {
-      display: none;
-    }
     &.--hidden {
-      display: none;
       opacity: 0;
+    }
+    @media(min-width: $SMALL) {
+      display: none;
     }
   }
 }
