--- a/src/components/atoms/collapse-btn/collapse-btn.scss
+++ b/src/components/atoms/collapse-btn/collapse-btn.scss
@@ -1,9 +1,9 @@
-@import '../../../styles/colors';
+@import '@styles/colors';
 
 .collapse-btn {
     border-radius: 100%;
-    width: 50px;
-    height: 50px;
+    width: 5rem;
+    height: 5rem;
     background-color: $DARK_BLUE;
 
     display: flex;
