--- a/src/app/cv/layout.scss
+++ b/src/app/cv/layout.scss
@@ -9,9 +9,8 @@
   height: 1px;
 
   &__content {
-    background-color: white;
-    flex: 1;
     background-color: $WHITE;
+    flex: 1;
     padding: 2rem;
     padding-left: 3rem;
     z-index: 0;
@@ -20,7 +19,7 @@
     transition: width 0.5s ease;
     overflow: auto;
 
-    &.--frozen {
+    &--frozen {
       pointer-events: none;
       overflow: hidden;
     }
@@ -38,9 +37,11 @@
     z-index: 1;
     opacity: 0.4;
     transition: opacity 0.5s ease;
-    &.--hidden {
+
+    &--hidden {
       opacity: 0;
     }
+
     @media(min-width: $SMALL) {
       display: none;
     }
