Aliases have been fixed

--- a/src/components/atoms/menu-option/menu-option.scss
+++ b/src/components/atoms/menu-option/menu-option.scss
@@ -1,5 +1,5 @@
-@import '@styles/colors';
-@import '@styles/typography';
+@import '~styles/colors';
+@import '~styles/typography';
 
 .menu-option {
     width: calc(100% + 2.5rem);
