--- a/src/components/widgets/left-panel/left-panel.scss
+++ b/src/components/widgets/left-panel/left-panel.scss
@@ -1,5 +1,5 @@
-@import '@styles/colors';
-@import '@styles/breakpoints.scss';
+@import '~styles/colors';
+@import '~styles/breakpoints.scss';
 
 .left_panel {
     min-width: 30rem;
