--- a/src/components/atoms/switcher/switcher.scss
+++ b/src/components/atoms/switcher/switcher.scss
@@ -1,46 +1,44 @@
 @import '~styles/colors';
 
 .switcher {
-    font-size: 2rem;
+  font-size: 2rem;
+  display: flex;
+  width: min-content;
+  border-radius: 6%;
+  border: 2px solid $DIRTY_BLUE;
+
+  &--short {
+    border: 0;
+    width: 100%;
+  }
+
+  &__option {
+    height: 3.5rem;
+    width: 5rem;
+    margin: 0.5rem;
     display: flex;
-    width: min-content;
-    border-radius: 6%;
-    border: 2px solid $DIRTY_BLUE;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: 2px solid transparent;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    cursor: pointer;
 
-    &.--short {
-        border: 0;
-        width: 100%;
+    &--disabled {
+      cursor: not-allowed;
+      opacity: 0.5;
     }
 
-    &__option {
-        height: 3.5rem;
-        width: 5rem;
-        margin: 0.5rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: transparent;
-        border: 2px solid transparent; // Начальное состояние с прозрачной рамкой
-        transition: background-color 0.3s ease, border-color 0.3s ease; // Добавляем анимацию для border-color
-        cursor: pointer;
-
-        &.--disabled {
-            cursor: not-allowed;
-            opacity: 0.5;
-        }
-
-        &:hover {
-            &:not(.--disabled) {
-                border-color: $DIRTY_BLUE; // Изменяем только цвет рамки
-            }
-        }
-
-        &.--short {
-            margin: 0;
-        }
-
-        &.--active {
-            background-color: $DIRTY_BLUE;
-        }
+    &:hover:not(&--disabled) {
+      border-color: $DIRTY_BLUE;
     }
+
+    &--short {
+      margin: 0;
+    }
+
+    &--active {
+      background-color: $DIRTY_BLUE;
+    }
+  }
 }
