--- a/src/components/atoms/titled-block/titled-block.scss
+++ b/src/components/atoms/titled-block/titled-block.scss
@@ -1,9 +1,12 @@
+@import '~styles/colors';
 @import '~styles/typography.scss';
 
 .titled_block {
-    &__content {
-        font-size: 1.8rem;
-        padding: 1rem 0;
-        padding-left: 2rem;
-    }
+  &__title>h3 {
+    font-weight: 500;
+  }
+  &__content {
+    font-size: 1.8rem;
+    padding: 1rem 0 1rem 2rem;
+  }
 }
