--- a/src/components/features/menu/menu.scss
+++ b/src/components/features/menu/menu.scss
@@ -1,9 +1,13 @@
+@import '~styles/colors';
+
 .menu {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
-    &.--short {
-        padding: 1rem 0 0 0;
-    }
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  padding-left: 0;
+
+  &--short {
+    padding: 1rem 0 0 0;
+  }
 }
