--- a/src/components/features/switchers/switchers.scss
+++ b/src/components/features/switchers/switchers.scss
@@ -1,4 +1,5 @@
 @import '~styles/breakpoints';
+
 .switchers {
     width: 100%;
     overflow: hidden;
@@ -6,14 +7,16 @@
     padding: 0 2rem 0 0;
     justify-content: space-between;
     position: relative;
-    &.--closed {
-        flex-direction: column;
-        padding: 0;
-        gap: 1rem;
-    }
+    
     @media(max-width: $EXTRA_LARGE) {
         flex-direction: row;
         justify-content: center;
-        gap:1rem;
+        gap: 1rem;
+    }
+
+    &__closed {
+        flex-direction: column;
+        padding: 0;
+        gap: 1rem;
     }
 }
