--- a/src/components/molecules/work-exp/work-exp-card/work-exp-card.scss
+++ b/src/components/molecules/work-exp/work-exp-card/work-exp-card.scss
@@ -2,4 +2,12 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+
+    &__position {
+        font-size: 2rem;
+    }
+
+    &__period {
+        font-size: 1.5rem
+    }
 }
