--- a/src/components/molecules/work-exp/work-exp-title/work-exp-title.scss
+++ b/src/components/molecules/work-exp/work-exp-title/work-exp-title.scss
@@ -11,6 +11,7 @@ $gap-size: 0;
     align-items: center;
     padding: 1rem 0 1rem 1rem;
     text-wrap: balance;
+
     @media(max-width: $SMALL) {
         align-items: self-start;
         flex-direction: column;
@@ -34,35 +35,43 @@ $gap-size: 0;
             flex-direction: column;
             padding: 1rem;
         }
+    }
 
-        &__line {
-            background-color: $line-color;
-            width: 100%;
-            height: 5px;
-            grid-row: 2;
+    &__line {
+        background-color: $line-color;
+        width: 100%;
+        height: 5px;
+        grid-row: 2;
 
-            @media(max-width: $SMALL) {
-                display: none;
-            }
+        @media(max-width: $SMALL) {
+            display: none;
         }
+    }
 
-        &__position,
-        &__period {
-            display: flex;
-            align-items: center;
-            padding-right: 2rem;
-            align-self: flex-start;
+    &__position,
+    &__period {
+        display: flex;
+        align-items: center;
+        padding-right: 2rem;
+        align-self: flex-start;
+    }
+
+    &__position {
+        grid-row: 1;
+        justify-self: flex-end;
+        h3 {
+            font-size: 2rem;
+            font-weight: 500;
         }
+    }
 
-        &__position {
-            grid-row: 1; // Позиция на первой строке
-            justify-self: flex-end;
-        }
-
-        &__period {
-            justify-self: flex-end;
-            grid-row: 3; // Период на третьей строке
-            padding-right: 1rem; // Индивидуальное правое отступ для элемента period
+    &__period {
+        justify-self: flex-end;
+        font-size: 1rem;
+        grid-row: 3;
+        padding-right: 1rem;
+        h4 {
+            font-size: 1.5rem;
         }
     }
 }
