--- a/src/components/atoms/iconed-record/iconed-link.scss
+++ b/src/components/atoms/iconed-record/iconed-link.scss
@@ -18,7 +18,7 @@
     }
   
     &--blue {
-      color: $LIGHT_BLUE; // Пример использования модификатора цвета
+      color: $LIGHT_BLUE;
     }
   }
   
