--- a/src/components/widgets/left-panel/left-panel.scss
+++ b/src/components/widgets/left-panel/left-panel.scss
@@ -1,3 +1,4 @@
+// TODO: Под рефакторинг
 @import '~styles/colors';
 @import '~styles/breakpoints.scss';
 
@@ -19,23 +20,31 @@
   z-index: 2;
   display: flex;
   flex-direction: column;
-  min-width: 30rem;
+  align-items: end;
+  min-width: 33rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 100%;
   height: 100%;
+  direction: rtl;
+
+  &>*{
+    direction: ltr;
+  }
 
   @media (max-width: $EXTRA_SMALL) {
     position: fixed;
   }
 
   &--closed {
-    min-width: 5rem;
-
+    min-width: 7rem;
+    
     @media (max-width: $EXTRA_LARGE) {
       min-width: 50px;
     }
   }
 
   &__download-btn {
-    height: 6rem;
     margin-left: auto;
     display: flex;
     justify-content: flex-end;
@@ -49,7 +58,7 @@
   }
 
   &__content {
-    min-height: 100%;
+    flex: 1;
     background-color: $LIGHT_BLUE;
     width: 30rem;
     padding: 1rem;
@@ -111,27 +120,28 @@
   }
 
   &__collapse {
-    position: absolute;
-    left: 275px;
+    position: relative;
+    left: 265px;
+    top: 50px;
 
     @media (max-width: $EXTRA_LARGE) {
       left: 185px;
     }
 
-    &--closed {
-      left: 2rem;
-      top: -1rem;
-      position: relative;
+    @media (max-width: $SMALL) {
+      height: 30px;
+      width: 30px;
+    }
 
-      @media (max-width: $EXTRA_LARGE) {
-        left: 15px;
-      }
+    &--closed {
+      left: 2rem!important;
+      top: -1rem!important;
+      position: relative;
     }
   }
 
   @media (max-width: $EXTRA_LARGE) {
-    min-width: 200px;
-    width: 200px;
+    width: 225px;
 
     &--closed {
       min-width: 50px;
@@ -146,14 +156,14 @@
       }
     }
 
+    &__collapse {
+      top: 30px;
+      left: 175px;
+    }
+
     .collapse-btn {
       height: 40px;
       width: 40px;
-
-      @media (max-width: $SMALL) {
-        height: 30px;
-        width: 30px;
-      }
     }
   }
 }
