--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -110,8 +110,8 @@ html {
 
 body {
   height: 100%;
-  background-color: #FCFAFA;
   background-repeat: repeat;
+  background-color: white;
 }
 
 *, *::before, *::after {
