--- a/src/components/widgets/left-panel/left-panel.module.scss
+++ b/src/components/widgets/left-panel/left-panel.module.scss
@@ -20,7 +20,7 @@
   z-index: 2;
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
   min-width: 33rem;
   overflow-y: auto;
   overflow-x: hidden;
