--- a/src/components/atoms/titled-block/titled-block.module.scss
+++ b/src/components/atoms/titled-block/titled-block.module.scss
@@ -1,9 +1,8 @@
-@import '~styles/colors';
-@import '~styles/typography.scss';
-
 .titled_block {
-  &__title>h3 {
-    font-weight: 500;
+  &__title {
+    &-text {
+      font-weight: 500;
+    }
   }
   &__content {
     font-size: 1.8rem;
