--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,6 @@
+@import '~styles/colors';
+@import '~styles/typography';
+@import '~styles/breakpoints';
 /* Reset and base styles  */
 li {
   text-indent: -3rem; /* Отрицательный отступ для всех строк кроме первой */
@@ -103,6 +106,10 @@ legend {
 }
 
 html {
+  font-size: 10px;
+  @media(max-width: $EXTRA_LARGE) {
+      font-size: 6px;
+  }
   min-height: 100%;
   height: 1px;
   box-sizing: border-box;
